add executing thread status
